# Minimal-Setup

./: .gitignore  README.md  setup.bat
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
configs/: pyproject.toml  requirements-dev.txt
scripts/: configure_git.bat  create_project.bat  install_base.bat  install_claude.bat  install_data_tools.bat  install_docker.bat  install_nodejs.bat  install_python_uv.bat  install_terminal.bat  install_vscode.bat  install_wsl.bat
workspaces/: docker-development.json  python-data-science.json  web-development.json
